--- a/form-validator/qunit.html
+++ b/form-validator/qunit.html
@@ -231,7 +231,7 @@
                 {val:input('4000000000000002', {'allowing':'mastercard, discover, visa', '':'creditcard'}), isValid:true},
                 {val:input('501800000009', {'allowing':'maestro', '':'creditcard'}), isValid:true},
                 {val:input('501800000009', {'allowing':'visa', '':'creditcard'}), isValid:false},
-                {val:input('501800000009', {'allowing':'jadajada,maestro,master', '':'creditcard'}), isValid:true},
+                {val:input('501800000009', {'allowing':'jadajada,maestro,mastercard', '':'creditcard'}), isValid:true},
                 {val:input('5100000000000008', {'allowing':'mastercard', '':'creditcard'}), isValid:true},
                 {val:input('6011000000000004', {'allowing':'discover', '':'creditcard'}), isValid:true},
                 {val:input('6011000000000005', {'allowing':'discover', '':'creditcard'}), isValid:false}
