fix for issue #137 and added unit tests for #156

--- a/form-validator/form-test.html
+++ b/form-validator/form-test.html
@@ -227,6 +227,14 @@
             <label class="control-label">Test</label>
             <input name="test" data-validation="number" type="text" />
         </div>
+        <div class="form-group">
+            <label class="control-label">Password</label>
+            <input name="pass" data-validation="confirmation" type="password" />
+        </div>
+        <div class="form-group">
+            <label class="control-label">Password again</label>
+            <input name="pass_confirmation" type="password" />
+        </div>
         <p>
             <input type="submit" class="button">
             <input type="reset" class="button">
