--- a/form-validator/form-test.html
+++ b/form-validator/form-test.html
@@ -172,10 +172,10 @@
             <label class="control-label">File validation</label>
             <input type="file" name="some-file1" class="form-control"
                    data-validation="size mime required"
-                   data-validation-size-error-msg="The file cant be larger than 100kb"
-                   data-validation-error-msg="You must upload an image file"
+                   data-validation-size-error-msg="The file cant be larger than 400kb"
+                   data-validation-error-msg="You must upload an image file (max 400 kb)"
                    data-validation-allowing="jpg, png, ico"
-                   data-validation-max-size="100kb" />
+                   data-validation-max-size="400kb" />
         </div>
         <div class="form-group">
             <label class="control-label">
