--- a/form-validator/qunit.html
+++ b/form-validator/qunit.html
@@ -163,6 +163,8 @@
                 {val:'domain.xxx', isValid:true},
                 {val:'domain.com', isValid:true},
                 {val:'www.domain.com', isValid:true},
+                {val:'q.com', isValid:true},
+                {val:'v.com', isValid:false},
                 {val:'amazone.website.tippit.de', isValid:true},
                 {val:'amazone.website.co.uk', isValid:true},
                 {val:'http://domain.se', isValid:false},
