--- a/form-validator/qunit.html
+++ b/form-validator/qunit.html
@@ -143,6 +143,9 @@
                 {val: 'http://google.xxy', isValid: false},
                 {val: 'http://google.xxy/test/test.jsp', isValid: false},
                 {val: 'http://google.test.de', isValid: true},
+                {val: 'http://test.xn--fiqz9s', isValid: true},
+                {val: 'http://test.youtube', isValid: true},
+                {val: 'http://test.youtubez', isValid: false},
                 {val: 'http://google.test.co.uk/', isValid: true}
             ];
 
