--- a/form-validator/form-test.html
+++ b/form-validator/form-test.html
@@ -81,7 +81,12 @@
 
         <div class="form-group">
             <label class="control-label" for="country-suggestions">Swedish county suggestions</label>
-            <input name="Swedish county suggestion" data-validation="swecounty" type="text" id="swedish-county-suggestions" class="form-control" />
+            <div>
+                <div>
+                    <!-- Make sure error class "has-error" gets all the way up to .form-group -->
+                    <input name="Swedish county suggestion" data-validation="swecounty" type="text" id="swedish-county-suggestions" class="form-control" />
+                </div>
+            </div>
         </div>
 
         <div class="form-group">
