datalist now supported in IE version <=9

--- a/form-validator/form-test.html
+++ b/form-validator/form-test.html
@@ -290,8 +290,8 @@
         <h2>HTML5 attributes</h2>
         <div class="form-group">
             <label class="control-label">type="email"</label>
-            <input type="text" required="required" list="mejl" />
-            <datalist id="mejl">
+            <input type="text" required="required" list="da-mejl" />
+            <datalist id="da-mejl">
                 <option value="Test">Test</option>
                 <option value="test2">test2</option>
                 <option value="test3">test3</option>
