--- a/form-validator/qunit.html
+++ b/form-validator/qunit.html
@@ -531,7 +531,10 @@
                 {val:input('1234', {length : 'min5', '':'number length'}), isValid:false},
                 {val:input('12345', {length : 'min5', '':'number length'}), isValid:true},
                 {val:input('1234a', {length : 'min5', '':'number length'}), isValid:false},
-                {val:input('12345678', {length : 'min5', '':'number length'}), isValid:true}
+                {val:input('12345678', {length : 'min5', '':'number length'}), isValid:true},
+                {val:input('12345678', {length : '5', '':'number length'}), isValid:false},
+                {val:input('12345', {length : '5', '':'number length'}), isValid:true},
+                {val:input('123', {length : '5', '':'number length'}), isValid:false}
             ];
 
             $.each(links, function(i, obj) {
