--- a/form-validator/form-test.html
+++ b/form-validator/form-test.html
@@ -5,6 +5,7 @@
     <title>Form Test</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-wip/css/bootstrap.min.css" />
     <link rel="stylesheet" href="//code.jquery.com/ui/1.10.4/themes/black-tie/jquery-ui.css" />
+    <link rel="stylesheet" href="theme-default.css" />
     <style>
 
         /* Form and inputs */
@@ -23,15 +24,6 @@
             margin-bottom: 8px;
         }
 
-        /* While server is being requested */
-        form.validating-server-side {
-            background: #F2F2F2;
-        }
-
-        input.validating-server-side {
-            opacity: 0.5;
-            background: lightgoldenrodyellow;
-        }
 
         /* modify inputs for password strength */
         .password-strength input.form-control {
@@ -47,10 +39,6 @@
         /* Checkboxes */
         .form-group.check-boxes input {
             margin-left: 10px;
-        }
-
-        span.help {
-            color: #999 !important;
         }
 
         /* Error container for form C */
@@ -366,7 +354,8 @@
             validateOnBlur : validateOnBlur,
             errorMessagePosition : messagePosition,
             scrollToTopOnError : true,
-            borderColorOnError : 'purple',
+            lang : 'sv',
+           // borderColorOnError : 'purple',
             modules : 'security'+dev+', location'+dev+', sweden'+dev+', html5'+dev+', file'+dev+', uk'+dev,
             onModulesLoaded: function() {
                 $('#country-suggestions').suggestCountry();
@@ -423,5 +412,5 @@
 
 })(jQuery, window);
 </script>
-<body>
+</body>
 </html>
